Se creó el template de la plataforma con su navegacion principal y su footer (Hay un error en la navegacion cuando se despliegan las opciones de la cuenta)

--- a/Restaurant/template_navegacion.html
+++ b/Restaurant/template_navegacion.html
@@ -22,10 +22,15 @@
             <nav class="navegacion">
                 <a href="#" class="navegacion__enlace">Reservas</a>
                 <a href="#" class="navegacion__enlace">Sedes</a>
-                <a href="#" class="navegacion__enlace icono"><svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="currentColor" class="bi bi-person-circle" viewBox="0 0 16 16">
+                <li class="sebmenu"><a href="#" class="navegacion__enlace icono"><svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="currentColor" class="bi bi-person-circle" viewBox="0 0 16 16">
                     <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0z"/>
                     <path fill-rule="evenodd" d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8zm8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1z"/>
                   </svg></a>
+                  <ul>
+                      <a href="#" class="submenu1">Iniciar sesión</a>
+                      <a href="#" class="submenu1">Registrarse</a>
+                  </ul>
+                </li>
             </nav>
             
         </div>
@@ -43,7 +48,7 @@
 
     
 
-    <footer class="footer">
+    <!-- <footer class="footer">
         <div class="footer__contacto">
             <h4 class="titulo">Contáctanos</h4>
             <p>Restaurante</p>
@@ -69,6 +74,6 @@
         </div>
         <div class="footer__info">
         </div>
-    </footer>
+    </footer> -->
 </body>
 </html>
