Se comento el error

--- a/Restaurant/template_navegacion.html
+++ b/Restaurant/template_navegacion.html
@@ -48,7 +48,7 @@
 
     
 
-    <!-- <footer class="footer">
+    <footer class="footer">
         <div class="footer__contacto">
             <h4 class="titulo">Contáctanos</h4>
             <p>Restaurante</p>
@@ -74,6 +74,6 @@
         </div>
         <div class="footer__info">
         </div>
-    </footer> -->
+    </footer>
 </body>
 </html>
