pagina principal avanzada 90%, carrito de compras 30%

--- a/Restaurant/registro.html
+++ b/Restaurant/registro.html
@@ -17,7 +17,7 @@
             <nav class="navegacion">
                 <a href="index.html" class="navegacion__enlace">Inicio</a>
                 <a href="#" class="navegacion__enlace">Menú</a>
-                <a href="#" class="navegacion__enlace">Contáctanos</a>
+                <a href="#" class="navegacion__enlace">Promociones</a>
             </nav>
             <a class="logo" href="index.html">
                 <h1 class="logo__nombre no-margin centrar-texto">Restaurante</h1>
@@ -27,10 +27,12 @@
                 <a href="#" class="navegacion__enlace">Sedes</a>
                 <input type="checkbox" id="user">
                 <label for="user" class="lbl-user"><i class="icono fas fa-user"></i></label>
-                <!-- <ul>
-                    <li><a href="#" class="opc-user">Iniciar sesión</a></li>
-                    <li><a href="#" class="opc-user">Registrarse</a></li>
-                </ul> -->
+                <div class="submenu">
+                    <ul>
+                        <li><a href="login.html" class="opc-user">Iniciar sesión</a></li>
+                        <li><a href="registro.html" class="opc-user">Registrarse</a></li>
+                    </ul>
+                </div>
             </nav>
             
         </div>
