--- a/Restaurant/template_navegacion.html
+++ b/Restaurant/template_navegacion.html
@@ -15,7 +15,7 @@
             <nav class="navegacion">
                 <a href="#" class="navegacion__enlace">Inicio</a>
                 <a href="#" class="navegacion__enlace">Menú</a>
-                <a href="#" class="navegacion__enlace">Contáctanos</a>
+                <a href="#" class="navegacion__enlace">Promociones</a>
             </nav>
             <a class="logo" href="template_navegacion.html">
                 <h1 class="logo__nombre no-margin centrar-texto">Restaurante</h1>
@@ -23,12 +23,12 @@
             <nav class="navegacion">
                 <a href="#" class="navegacion__enlace">Reservas</a>
                 <a href="#" class="navegacion__enlace">Sedes</a>
-                <li class="sebmenu"><a href="#" class="navegacion__enlace icono"><i class="fas fa-user"></i></a>
-                  <!-- <ul>
-                      <a href="#" class="submenu1">Iniciar sesión</a>
-                      <a href="#" class="submenu1">Registrarse</a>
-                  </ul> -->
-                </li>
+                <div class="submenu">
+                    <ul>
+                        <li><a href="login.html" class="opc-user">Iniciar sesión</a></li>
+                        <li><a href="registro.html" class="opc-user">Registrarse</a></li>
+                    </ul>
+                </div>
             </nav>
             
         </div>
