Vista de carrito de compras a un 90%, vista de pago avanzada en un 50%

--- a/Restaurant/carrito.html
+++ b/Restaurant/carrito.html
@@ -4,7 +4,6 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="css/estilos.css">
-    <link rel="stylesheet" href="css/nosotros.css">
     <link rel="stylesheet" href="css/carrito.css">
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
@@ -41,13 +40,70 @@
         </div>
     </header>
 
-    <div class="nosotros">
-        <div class="historia">
-            <h4 class="h4-nosotros no-margin no-padding">Hola mundo</h4>
-            
+    <div class="carrito">
+        <div class="carrito1">
+            <h4 class="h4-carrito no-margin no-padding">Carrito</h4>
+            <h5 class="h5-carrito no-margin no-padding">Producto</h5>
+            <h5 class="h5-carrito no-margin no-padding">Precio</h5>
+            <h5 class="h5-carrito no-margin no-padding">Cantidad</h5>
+            <h5 class="h5-carrito no-margin no-padding">Total</h5>
+            <h5 class="h5-carrito no-margin no-padding">Eliminar</h5>
+            <div class="producto">
+                <img src="img/vista-previa.jpg" alt="" class="img-producto">
+                <a href="#" class="nombre">Lasagna</a>
+            </div>
+            <p class="precio">$20000</p>
+            <input type="number" class="cantidad" placeholder="1" min="1" max="10">
+            <p class="total">$40000</p>
+            <p class="eliminar"><i class="far fa-trash-alt"></i></p>
+            <div class="producto">
+                <img src="img/vista-previa.jpg" alt="" class="img-producto">
+                <a href="#" class="nombre">Lasagna</a>
+            </div>
+            <p class="precio">$20000</p>
+            <input type="number" class="cantidad" placeholder="1" min="1" max="10">
+            <p class="total">$40000</p>
+            <p class="eliminar"><i class="far fa-trash-alt"></i></p>
+            <div class="producto">
+                <img src="img/vista-previa.jpg" alt="" class="img-producto">
+                <a href="#" class="nombre">Lasagna</a>
+            </div>
+            <p class="precio">$20000</p>
+            <input type="number" class="cantidad" placeholder="1" min="1" max="10">
+            <p class="total">$40000</p>
+            <p class="eliminar"><i class="far fa-trash-alt"></i></i></p>
+            <div class="producto">
+                <img src="img/vista-previa.jpg" alt="" class="img-producto">
+                <a href="#" class="nombre">Lasagna</a>
+            </div>
+            <p class="precio">$20000</p>
+            <input type="number" class="cantidad" placeholder="1" min="1" max="10">
+            <p class="total">$40000</p>
+            <p class="eliminar"><i class="far fa-trash-alt"></i></i></p>
         </div>
         
-        <div class="accesos">
+        <div class="resumen">
+            <h4 class="h4-resumen no-margin no-padding">Resumen</h4>
+            <div class="detalle">
+                <p>Subtotal</p>
+                <p><b>Descuentos</b></p>
+                <p>Cupones</p>
+                <p>Promociones</p>
+                <p><b>Total descuentos</b></p>
+                <p><b>Total a pagar</b></p>
+                <p><b>Agregar cupón</b></p>
+            </div>
+            <div class="valor">
+                <p>$160000</p>
+                <p><b>&nbsp</b></p>
+                <p>$20000</p>
+                <p>$0</p>
+                <p><b>$20000</b></p>
+                <p><b>$140000</b></p>
+            </div>
+            <input type="text" class="entrada-carrito" placeholder="Ingrese un código de descuento">
+            <button class="submit-btn1">Ingresar</button>
+            <a href="pago.html" class="submit-btn">Pagar</a>
         </div>
     </div>
 
