--- a/Restaurant/login.html
+++ b/Restaurant/login.html
@@ -43,7 +43,7 @@
         <form id="login" class="login">
             <h3 class="title-login no-margin no-padding">Iniciar sesión</h3>
             <select name="rol" class="entrada">
-                <option>Elija su rol</option>
+                <option disabled selected>Elija su rol</option>
                 <option>Empleado</option>
                 <option>Cliente</option>
             </select>
