--- a/Restaurant/index.html
+++ b/Restaurant/index.html
@@ -42,7 +42,7 @@
 
     <div class="container">
         <div class="btn-carrito">
-            <a href="carrito.html"><i class="carrito fas fa-shopping-cart"></i></a>
+            <a href="carrito.html"><i class="icono-carrito fas fa-shopping-cart"></i></a>
         </div>
     </div>
 
