--- a/front/menu.html
+++ b/front/menu.html
@@ -24,6 +24,12 @@
       </div>
     </nav>
     <main>
+      <div class="cart-container">
+        <button class="cart-btn">
+          <span class="cart-items">0</span>
+          <i class="fas fa-shopping-cart"></i>
+        </button>
+      </div>
       <div class="producto-destacado">
         <h2>Producto destacado</h2>
         <div class="producto-destacado-cont">
