actualizacion todos los archivos

--- a/mis datos.html
+++ b/mis datos.html
@@ -42,7 +42,7 @@
         <br>
         <button class="boton">Mis Medios de pago</button>
         <br>
-        <button class="boton">Mis Reservas</button>
+        <button class="boton">MIS RESERVAS</button>
         <br>
         <button class="boton">Cerrar sesión</button>
      </div>
