--- a/mis datos.html
+++ b/mis datos.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <link rel="stylesheet" href="estilos.css">
+    <link rel="stylesheet" href="estilo-misdatos.css">
+    <link rel="stylesheet" href="normalize.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
         integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -43,17 +45,15 @@
         <button class="boton">Cerrar sesión</button>
      </div>
      <div id="caja-datos">
-       <form action="">
-        <h3>Nombres</h3>
+       <form class="datos">
+        <h4>Nombres</h4>
         <input type="text" name="nombres" class="entrada" placeholder="Nombres" required>
-        <h3>Apellidos</h3>
+        <h4>Apellidos</h4>
         <input type="text" name="apellidos" class="entrada"placeholder="Apellidos" required>
-        <br>
-        <h3>Email</h3>
+        <h4>Email</h4>
         <input type="text" name="mail" class="entrada" placeholder="Email" required>
-        <h3>Numero de contacto</h3>
+        <h4>Numero de contacto</h4>
         <input type="text" name="numero" class="entrada"placeholder="Numero de contacto" required>
-        <br>
         <button class="submit-btn">Editar</button>
        </form>
      </div>
