Solucion de errores y reubicacion de objetos

--- a/Restaurant/registro.html
+++ b/Restaurant/registro.html
@@ -25,14 +25,7 @@
             <nav class="navegacion">
                 <a href="#" class="navegacion__enlace">Reservas</a>
                 <a href="#" class="navegacion__enlace">Sedes</a>
-                <input type="checkbox" id="user">
-                <label for="user" class="lbl-user"><i class="icono fas fa-user"></i></label>
-                <div class="submenu">
-                    <ul>
-                        <li><a href="login.html" class="opc-user">Iniciar sesión</a></li>
-                        <li><a href="registro.html" class="opc-user">Registrarse</a></li>
-                    </ul>
-                </div>
+                <a href="login.html"><i class="icono fas fa-user"></i></a>
             </nav>
             
         </div>
