--- a/mis datos.html
+++ b/mis datos.html
@@ -34,13 +34,25 @@
      <div id="caja-op">
         <label for="user" class="lbl-user"><i class="icono fas fa-user">Username</i></label>
         <br>
-        <button class="boton">Mis Datos</button>
+        <nav class="boton">
+            <a href="mis datos.html"> Mis Datos</a>
+
+        </nav>
         <br>
-        <button class="boton">Mis Pedidos</button>
+        <nav class="boton">
+            <a href="mis pedidos.html">Mis Pedidos</a>
+
+        </nav>
         <br>
-        <button class="boton">Mis Medios de pago</button>
+        <nav class="boton">
+            <a href="mis medios de pago.html">Mis Medios de pago</a>
+
+        </nav>
         <br>
-        <button class="boton">Mis Reservas</button>
+        <nav class="boton">
+            <a href="mis reservas.html">Mis Reservas</a>
+
+        </nav>
         <br>
         <button class="boton">Cerrar sesión</button>
      </div>
